# dop-gui

./: .gitignore  CMakeLists.txt  Doxyfile  HowToAddTestCommands.md  README.md  agents.md  build.bat  build_dependencies.sh  dop-ui.md  notes.md  plan.md  raw-imgui-wrapper.md  spec.md  task.md  test_run.bat  test_run.sh  testing.md
docs/: mainpage.dox  testing.dox
prompts/: spec-arch.md  spec-init.md  spec-plan.md  spec-review.md  spec-task.md
scenes/: bootstrap_scene.json5  cubes.json5  shapes.json5
src/: App.cpp  App.h  AppState.cpp  AppState.h  Command.cpp  Command.h  InputManager.cpp  InputManager.h  NewShapePanel.cpp  NewShapePanel.h  Panel.cpp  Panel.h  PanelWindow.cpp  PanelWindow.h  PropertiesPanel.cpp  PropertiesPanel.h  Query.cpp  Query.h  SceneInfoPanel.cpp  SceneInfoPanel.h  ScriptRunner.cpp  ScriptRunner.h  Theme.cpp  Theme.h  UiLayer.cpp  UiLayer.h  UiLayoutUtils.cpp  UiLayoutUtils.h  UiManager.cpp  UiManager.h  UiPanelTree.cpp  UiPanelTree.h  VsgVisualizer.cpp  VsgVisualizer.h  Widgets.cpp  Widgets.h  WindowManager.cpp  WindowManager.h  YogaLayout.cpp  YogaLayout.h  (+1 more)
src/shaders/: triangle.frag  triangle.vert
tests/: desktop_bootstrap.json5  live_regression.json5  live_ui_bg_blue.json5  live_ui_grid_off.json5  live_ui_scene_create.json5  live_ui_scene_cubes.json5  mutate_cli.json5  regression_actions.json5  regression_cli.json5  smoke_cli.json5  ui_background_cli.json5  ui_extended_widgets_cli.json5  ui_grid_cli.json5  ui_layout_cli.json5  ui_layout_slots_cli.json5  ui_new_shape_cli.json5  ui_popup_table_cli.json5  ui_properties_cli.json5  ui_scene_click_cli.json5  ui_scene_create_cli.json5  ui_scene_info_widgets_cli.json5
ui/: layout.json5
